data analysis fixed

--- a/R_analysis/main_measures/MDMT/mdmt_average_reliable.Rmd
+++ b/R_analysis/main_measures/MDMT/mdmt_average_reliable.Rmd
@@ -44,7 +44,7 @@ task_df$fitts_id_level <- factor(task_df$fitts_id_level, levels = fitts_id_level
 ######################### get mean and sd (or se) ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  get_summary_stats(single_trust, type = "mean_sd")
+  get_summary_stats(mdmt_reliable_ave, type = "mean_sd")
 
 
 
@@ -55,10 +55,11 @@ task_df %>%
 ```{r do plotting}
 
 bxp1 <- ggboxplot(
-  task_df, x = "ring_id", y = "single_trust",
+  task_df, x = "ring_id", y = "mdmt_reliable_ave",
   color = "auto_level", palette = "jco"
   )
 bxp1
+
 
 ```
 
@@ -70,28 +71,28 @@ bxp1
 ######################### check for outliers ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  identify_outliers(single_trust)
+  identify_outliers(mdmt_reliable_ave)
 
 ######################### check normality ######################### 
 task_df %>%
   group_by(auto_level, ring_id) %>%
-  shapiro_test(single_trust)
+  shapiro_test(mdmt_reliable_ave)
 
 ######################### plot normality ######################### 
-ggqqplot(task_df, "single_trust", ggtheme = theme_bw()) +
+ggqqplot(task_df, "mdmt_reliable_ave", ggtheme = theme_bw()) +
   facet_grid(ring_id ~ auto_level, labeller = "label_both")
 
 
 ```
 
 
-## Fit ANOVA
+## Fit Model
 
 ```{r fit model}
 
 ######################### Two-way mixed ANOVA test #########################  
 res.aov <- anova_test(
-  data = task_df, dv = single_trust, wid = part_id,
+  data = task_df, dv = mdmt_reliable_ave, wid = part_id,
   within = c(auto_level, ring_id)
   )
 get_anova_table(res.aov)
@@ -100,7 +101,7 @@ get_anova_table(res.aov)
 # #################### Effect of auto_level for each ring_id #################### 
 # one.way <- task_df %>%
 #   group_by(ring_id) %>%
-#   anova_test(dv = single_trust, wid = part_id, within = auto_level) %>%
+#   anova_test(dv = mdmt_reliable_ave, wid = part_id, within = auto_level) %>%
 #   get_anova_table() %>%
 #   adjust_pvalue(method = "bonferroni")
 # one.way
@@ -108,7 +109,7 @@ get_anova_table(res.aov)
 # #################### Effect of ring_id for each auto_level #################### 
 # one.way <- task_df %>%
 #   group_by(auto_level) %>%
-#   anova_test(dv = single_trust, wid = part_id, within = ring_id) %>%
+#   anova_test(dv = mdmt_reliable_ave, wid = part_id, within = ring_id) %>%
 #   get_anova_table() %>%
 #   adjust_pvalue(method = "bonferroni")
 # one.way
@@ -118,14 +119,14 @@ get_anova_table(res.aov)
 pwc1 <- task_df %>%
   group_by(fitts_id_level) %>%
   pairwise_t_test(
-    single_trust ~ auto_level, paired = TRUE,
+    mdmt_reliable_ave ~ auto_level, paired = TRUE,
     p.adjust.method = "bonferroni"
     )
 pwc1
 # Create a box plot
 pwc1 <- pwc1 %>% add_xy_position(x = "auto_level", group = "fitts_id_level")
 bxp2 <- ggboxplot(
-  task_df, x = "auto_level", y = "single_trust", 
+  task_df, x = "auto_level", y = "mdmt_reliable_ave", 
   color = "fitts_id_level", palette = "jco"
 ) +
   stat_pvalue_manual(
@@ -140,14 +141,14 @@ bxp2
 pwc2 <- task_df %>%
   group_by(auto_level) %>%
   pairwise_t_test(
-    single_trust ~ fitts_id_level, paired = TRUE,
+    mdmt_reliable_ave ~ fitts_id_level, paired = TRUE,
     p.adjust.method = "bonferroni"
     )
 pwc2
 # Create a box plot
 pwc2 <- pwc2 %>% add_xy_position(x = "fitts_id_level", group = "auto_level")
 bxp3 <- ggboxplot(
-  task_df, x = "fitts_id_level", y = "single_trust", 
+  task_df, x = "fitts_id_level", y = "mdmt_reliable_ave", 
   color = "auto_level", palette = "jco"
 ) +
   stat_pvalue_manual(
@@ -166,25 +167,24 @@ bxp3
 ```{r fit model}
 
 # ###### fit linear mixed model 1 ######
-model <- lmer(single_trust ~ auto_num * fitts_id_num + (1+auto_num|part_id) + (1+fitts_id_num|part_id) + (1|part_id),
+model <- lmer(mdmt_reliable_ave ~ auto_num * fitts_id_num + (1+auto_num|part_id) + (1+fitts_id_num|part_id) + (1|part_id),
               data = task_df)
 summary(model)
 
 
 ###### fit linear mixed model 2 ######
-fit <- lm(single_trust ~ fitts_id_num * auto_level, data = task_df)
+fit <- lm(mdmt_reliable_ave ~ fitts_id_num * auto_level, data = task_df)
 # summary(fit)
 
 interact_plot(fit, pred = fitts_id_num, modx = auto_level, 
               interval = TRUE, int.type = "confidence", int.width = .8,
               plot.points = TRUE,
-              x.label="Fitts ID", y.label="Single-Scale Trust", 
+              x.label="Fitts ID", y.label="MDMT Reliable Averaged", 
               modx.labels = c("low", "med", "high")
               )
 
 
 ```
-
 
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
