--- a/R_analysis/main_measures/NASA-TLX/tlx_average.Rmd
+++ b/R_analysis/main_measures/NASA-TLX/tlx_average.Rmd
@@ -32,7 +32,7 @@ setwd("C:/Users/micha/OneDrive/My_GitHub_Repos/AutonomyFitts/data/")
 task_df <- read_csv("all_data.csv")
 
 auto_levels_order <- c("low_auto", "med_auto", "high_auto")  # Replace these with your actual level names
-fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id1", "med_fitts_id2", "high_fitts_id")  # Replace these with your actual level names
+fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id2", "med_fitts_id1", "high_fitts_id")  # Replace these with your actual level names
 
 # Reorder the factor levels of "auto_level" according to levels_order
 task_df$auto_level <- factor(task_df$auto_level, levels = auto_levels_order)
@@ -54,8 +54,16 @@ task_df %>%
 
 ```{r do plotting}
 
+tlx_dims_df <- data.frame(task_df$tlx_mental, task_df$tlx_physical, task_df$tlx_hurried, 
+                          task_df$tlx_insecure, task_df$tlx_hard, task_df$tlx_successful)
+
+######################### calculate Cronbach's Alpha with 95% confidence interval ######################### 
+cronbach.alpha(tlx_dims_df, CI=TRUE)
+
+
+
 bxp1 <- ggboxplot(
-  task_df, x = "ring_id", y = "tlx_ave",
+  task_df, x = "fitts_id_level", y = "tlx_ave",
   color = "auto_level", palette = "jco"
   )
 bxp1
@@ -93,7 +101,7 @@ ggqqplot(task_df, "tlx_ave", ggtheme = theme_bw()) +
 ######################### Two-way mixed ANOVA test #########################  
 res.aov <- anova_test(
   data = task_df, dv = tlx_ave, wid = part_id,
-  within = c(auto_level, ring_id)
+  within = c(auto_level, fitts_id_level)
   )
 get_anova_table(res.aov)
 
