--- a/R_analysis/main_measures/effective_auto.Rmd
+++ b/R_analysis/main_measures/effective_auto.Rmd
@@ -32,7 +32,7 @@ setwd("C:/Users/micha/OneDrive/My_GitHub_Repos/AutonomyFitts/data/")
 task_df <- read_csv("all_data.csv")
 
 auto_levels_order <- c("low_auto", "med_auto", "high_auto")  # Replace these with your actual level names
-fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id1", "med_fitts_id2", "high_fitts_id")  # Replace these with your actual level names
+fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id2", "med_fitts_id1", "high_fitts_id")  # Replace these with your actual level names
 
 # Reorder the factor levels of "auto_level" according to levels_order
 task_df$auto_level <- factor(task_df$auto_level, levels = auto_levels_order)
@@ -55,7 +55,7 @@ task_df %>%
 ```{r do plotting}
 
 bxp1 <- ggboxplot(
-  task_df, x = "ring_id", y = "eff_auto_num",
+  task_df, x = "fitts_id_level", y = "eff_auto_num",
   color = "auto_level", palette = "jco"
   )
 bxp1
