--- a/R_analysis/main_measures/move_times.Rmd
+++ b/R_analysis/main_measures/move_times.Rmd
@@ -21,6 +21,7 @@ library(dplyr)
 library(ez)
 library(ltm)
 library(interactions)
+library(lmerTest)
 ```
 
 
@@ -32,7 +33,7 @@ setwd("C:/Users/micha/OneDrive/My_GitHub_Repos/AutonomyFitts/data/")
 task_df <- read_csv("all_data.csv")
 
 auto_levels_order <- c("low_auto", "med_auto", "high_auto")  # Replace these with your actual level names
-fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id1", "med_fitts_id2", "high_fitts_id")  # Replace these with your actual level names
+fitts_id_levels_order <- c("low_fitts_id", "med_fitts_id2", "med_fitts_id1", "high_fitts_id")  # Replace these with your actual level names
 
 # Reorder the factor levels of "auto_level" according to levels_order
 task_df$auto_level <- factor(task_df$auto_level, levels = auto_levels_order)
@@ -55,7 +56,7 @@ task_df %>%
 ```{r do plotting}
 
 bxp1 <- ggboxplot(
-  task_df, x = "ring_id", y = "average_mt",
+  task_df, x = "fitts_id_level", y = "average_mt",
   color = "auto_level", palette = "jco"
   )
 bxp1
@@ -92,7 +93,7 @@ ggqqplot(task_df, "average_mt", ggtheme = theme_bw()) +
 ######################### Two-way mixed ANOVA test #########################  
 res.aov <- anova_test(
   data = task_df, dv = average_mt, wid = part_id,
-  within = c(auto_level, ring_id)
+  within = c(auto_level, fitts_id_level)
   )
 get_anova_table(res.aov)
 
